<resources>
    <string name="app_name">VRConvo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="rooms">Rooms</string>
    <string name="characters">Characters</string>
    <string name="convo_coins_cc">Convo Coins:</string>
    <string name="repeatnewpass">Repeat New Password</string>
    <string name="currentpassword">Current Password</string>
    <string name="launching_vr_convo_manager">Launching VR Convo Manager...</string>
    <string name="please_wait_a_bit">Please wait a bit...</string>
    <string name="passhaschanged">Password has changed.</string>
    <string name="deviceisnotrelatedanymore">Device is not related to this account anymore.</string>
    <string name="friends">Friends</string>
    <string name="requests">Friend Requests</string>
    <string name="last_activity">Last activity</string>
    <string name="last_seen">Last seen</string>
    <string name="user">User</string>
    <string name="you_don_t_have_any_friends_nyou_can_search_for_a_friend_from_the_search_bar_above">You don\'t have any friends. You can search for a friend from the search button below.</string>
    <string name="there_are_currently_no_friend_requests_sent_or_received">There are currently no friend requests sent or received.</string>
    <string name="customassetbundles">Custom Asset Bundles</string>
</resources>
