<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="8dp"
    tools:context=".apps.profile.fragment.ItemsFragment">


    <FrameLayout
        android:id="@+id/friends_layout"
        android:layout_width="match_parent"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal"
        app:layout_heightPercent="90%">


        <LinearLayout
            android:id="@+id/friendsdata_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center_horizontal"
                android:text="@string/friends"
                android:textStyle="bold|italic" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/textview_nofriends"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/you_don_t_have_any_friends_nyou_can_search_for_a_friend_from_the_search_bar_above"
                android:visibility="gone" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerview_friends"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp" />


        </LinearLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:src="@drawable/ic_search_white_24dp"
            app:elevation="7dp"
            app:fabSize="normal"
            app:theme="@style/Theme.AppCompat.Light"
            app:useCompatPadding="true" />

        <com.arlib.floatingsearchview.FloatingSearchView
            android:id="@+id/floating_search_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            app:floatingSearch_close_search_on_keyboard_dismiss="true"
            app:floatingSearch_leftActionMode="showSearch"
            app:floatingSearch_searchBarMarginLeft="8dp"
            app:floatingSearch_searchBarMarginRight="8dp"
            app:floatingSearch_searchBarMarginTop="8dp"
            app:floatingSearch_searchHint="Search..."
            app:floatingSearch_showSearchKey="true"
            app:floatingSearch_suggestionsListAnimDuration="250" />


    </FrameLayout>

    <LinearLayout
        android:id="@+id/requests_layout"
        android:layout_width="match_parent"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_heightPercent="90%">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:text="@string/requests"
            android:textStyle="bold|italic" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/textview_nofriendreqs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/there_are_currently_no_friend_requests_sent_or_received"
            android:visibility="gone" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerview_requests"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp" />

    </LinearLayout>


    <mehdi.sakout.fancybuttons.FancyButton
        android:id="@+id/friends_button"
        android:layout_alignParentBottom="true"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp"
        app:layout_heightPercent="10%"
        app:layout_widthPercent="49%"
        fancy:fb_borderColor="@color/teal"
        fancy:fb_borderWidth="1dp"
        fancy:fb_defaultColor="@color/white"
        fancy:fb_focusColor="@color/colorPrimaryDark"
        fancy:fb_fontIconResource="&#xf0c0;"
        fancy:fb_iconPosition="left"
        fancy:fb_radius="30dp"
        fancy:fb_text="Friends"
        fancy:fb_textColor="@color/teal" />

    <mehdi.sakout.fancybuttons.FancyButton
        android:id="@+id/requests_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp"
        app:layout_heightPercent="10%"
        app:layout_widthPercent="49%"
        fancy:fb_borderColor="@color/teal"
        fancy:fb_borderWidth="1dp"
        fancy:fb_defaultColor="@color/white"
        fancy:fb_focusColor="@color/colorPrimaryDark"
        fancy:fb_fontIconResource="&#xf234;"
        fancy:fb_iconPosition="left"
        fancy:fb_radius="30dp"
        fancy:fb_text="Requests"
        fancy:fb_textColor="@color/teal" />

</android.support.percent.PercentRelativeLayout>