<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".apps.intro.fragment.RegisterFragment">


    <ImageView
        android:id="@+id/vrconvo_logo"
        android:layout_centerHorizontal="true"
        android:src="@drawable/storybegins"
        app:layout_heightPercent="40%"
        app:layout_widthPercent="60%" />


    <FrameLayout
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/white"
        app:layout_heightPercent="60%"
        app:layout_widthPercent="80%">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edittext_username_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edittext_password_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edittext_passwordrepeat_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/repeat_password"
                    android:inputType="textPassword" />

            </android.support.design.widget.TextInputLayout>

            <mehdi.sakout.fancybuttons.FancyButton
                android:id="@+id/button_register"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="10dp"
                fancy:fb_borderColor="@color/teal"
                fancy:fb_borderWidth="1dp"
                fancy:fb_defaultColor="@color/white"
                fancy:fb_focusColor="@color/teal"
                fancy:fb_radius="10dp"
                fancy:fb_text="SIGN UP"
                fancy:fb_textColor="@color/black" />

        </LinearLayout>

        <mehdi.sakout.fancybuttons.FancyButton
            android:id="@+id/button_back"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginBottom="32dp"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            fancy:fb_borderColor="@color/black"
            fancy:fb_borderWidth="1dp"
            fancy:fb_defaultColor="@color/colorPrimary"
            fancy:fb_focusColor="@color/colorPrimaryDark"
            fancy:fb_iconPosition="left"
            fancy:fb_radius="10dp"
            fancy:fb_text="Back"
            fancy:fb_textColor="@color/colorPrimaryDark" />

    </FrameLayout>


</android.support.percent.PercentRelativeLayout>
